@@ -3,6 +3,9 @@ TODO:
 >         {"S492", 30 * GB, MODEL_TYPE_REGULAR, FOURTH_GENERATION},
 HP-iPod.
 
+
+- retag tracks with database information
+
 - photo support
 
 - lyrics support (http://www.jcbsoft.net/podlyrics/)
